--- a/SU-302-Advanced-Artifactory-Security/back/pipelines.resources.yaml
+++ b/SU-302-Advanced-Artifactory-Security/back/pipelines.resources.yaml
@@ -4,7 +4,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: github
-      path: chanti529/SwampUp2021
+      path: ricklamborn/SwampUp2021
       branches:
         include: main
 
